Frontend/web-frontend/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-internal
  creationTimestamp: null
  name: #project_name#-ingress
spec:
  rules:
  - host: #project_name#.svc.dev.occ
    http:
      paths:
      - backend:
          service:
            name: #project_name#-svc
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
